Get version from Manifest, Fix build errors.